client/scss/index.scss
* {
    font-family: 'Pavanam', sans-serif;
    text-align: center;
}

body {
    margin: 0;
    display: flex;
    flex-direction: column;

}

.flex-container {
    margin-bottom: 50px;
}

.splash-container {
    margin: 125px auto 0;
}

.description-container {
    display: flex;
    flex: 1;
    justify-content: space-around;
    padding: 0 175px 20%;
}

.description-item {
    border: 1px solid #f1da36;
    border-radius: 50%;
    padding: 10px;
    min-width: 200px;
    min-height: 200px;
    margin: 0 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.description-title {
    font-size: 1.7em;
}

.subtitle {
    font-size: 2em;
}

.main-title {
    font-family: 'Caveat', cursive;
    font-size: 1.7em;
    margin: 50px 50px 0;
    text-align: right;
}

.main-subtitle {
    font-family: 'Caveat', cursive;
    font-size: 1.1em;
    margin: 0 50px;
    text-align: right;
}

.material-icons.md-48 { font-size: 48px; }

h1 {
    font-family: 'Caveat', cursive;
    font-size: 5em;
    margin: 0 auto;
}

h3 {
    font-family: 'Caveat', cursive;
    font-size: 1.2em;
    margin: 5px 0 0;
}

p {
    margin: 5px 0;
}

label {
    font-size: 1.3em;
    font-weight: bold;
}

input {
    min-width: 400px;
    height: 30px;
    margin: 15px 0 25px;
    border-radius: 5px;
    font-size: 1em;
}

.form-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 25px 0;
}

.input-form {
    margin: 15px 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.food-carousel {
    background: url('https://i2.wp.com/www.nourishmovelove.com/wp-content/uploads/2017/01/Avocado-Toast-Egg_Horizontal_2.jpg?fit=5184%2C3456&ssl=1') center center no-repeat;
    background-size: cover;
    min-width: 100%;
    height: 200px;
    margin-bottom: 50px;
}

.food-photo {
    width: 100%;
}

.recipes-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 0 0 25px;
}

.recipes-title {
    font-size: 2em;
}

.recipe-container {
    display: flex;
    flex-direction: row;
}

.recipe-box {
    display: flex;
    flex-direction: column;
    margin: 10px;
}

.recipe-title {
    max-width: 300px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    text-align: left;
    margin-left: 5px;
}

.recipe-photo {
    margin: 5px 5px 0;
    max-width: 300px;
}

.view-saved-button-container {
    margin: 35px auto;
}

.view-saved-recipes-button {
    margin-right: 5px;
    width: 160px;
}

.hide-saved-recipes-button {
    width: 160px;
}

.saved-recipes-box {
    transition-timing-function: ease;
    transition: 1.5s;
}

.saved-recipes-list {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.search-button {
    width: 120px;
}

.recipe-button {
    margin: 5px 0 0;
    width: 300px;
    align-self: center;
}

.enter {
    margin: 25px 0 75px;
}

#star-icon:hover {
    color: darkgrey;
    cursor: pointer;
}

hr {
    margin-bottom: 10px;
}

@media (max-width: 600px) {
    .flex-container {
        margin-bottom: 20px;
    }
    .splash-container {
        margin: 35px auto;
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    .description-container {
        padding: 10px;
        flex-direction: column;
    }
    .description-item {
        margin: 5px 0;
    }
    .recipe-container {
        flex-direction: column;
        align-items: center;
        justify-content: center;
        margin: 10px auto;
    }
    .saved-recipes-list {
        flex-direction: column;
    }
    .title {
        font-size: 4em;
    }
    .subtitle {
        font-size: 1.5em;
    }
    .enter {
        margin: 15px 0 15px 0;
    }
    .wrapper {
        flex-direction: column;
        padding: 0;
        margin: 15px 15px 25px;
    }
    form {
        margin: 15px;
        font-size: .8em;
    }
    label {
        font-size: 1.1em;
    }
    input {
        min-width: 200px;
    }
    h3 {
        margin: 0 0 5px;
    }
    .recipes-title {
        font-size: 1.7em;
    }
    .main-title {
        font-size: 1.7em;
        margin: 0 35px;
        text-align: center;
    }
    .main-subtitle {
        font-size: 1.1em;
        margin: 0 35px;
        text-align: center;
    }
}

